src/objects/Customer_Project_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Plugins_Tools__c</fullName>
        <inlineHelpText>Which of these plugins, if any, does the customer use in the production environment?</inlineHelpText>
        <label>Plugins &amp; Tools</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APOC</fullName>
                </value>
                <value>
                    <fullName>BI Connector</fullName>
                </value>
                <value>
                    <fullName>Bloom</fullName>
                </value>
                <value>
                    <fullName>GRAND Stack</fullName>
                </value>
                <value>
                    <fullName>Graph Data Science Library</fullName>
                </value>
                <value>
                    <fullName>GraphQL</fullName>
                </value>
                <value>
                    <fullName>Kettle</fullName>
                </value>
                <value>
                    <fullName>Linkurious</fullName>
                </value>
                <value>
                    <fullName>Neo4j Streams / Kafka</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Architecture__c</fullName>
        <label>Production Architecture</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Causal</fullName>
                </value>
                <value>
                    <fullName>Causal - Multi-DC</fullName>
                </value>
                <value>
                    <fullName>HA</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Health_Score_Label__c</fullName>
        <businessOwnerUser>maria.turegano@neo4j.com.trnprod</businessOwnerUser>
        <label>Project Health Score Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Health_Score__c</fullName>
        <businessOwnerUser>maria.turegano@neo4j.com.trnprod</businessOwnerUser>
        <label>Project Health Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RAM_GB__c</fullName>
        <label>RAM (GB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROLL_OUT_PLAN__c</fullName>
        <description>Migrated from long text to rich text on ~2020-02-03T14:08:15-0800</description>
        <label>z_Roll Out Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Read_Throughput__c</fullName>
        <inlineHelpText>Provide a description of the read throughput requirements.</inlineHelpText>
        <label>Read Throughput</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Time_Info__c</fullName>
        <label>z_Real Time Info?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Time_Score__c</fullName>
        <label>z_Real-Time Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Real_Time__c</fullName>
        <label>z_Real-Time Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_out_Plan_dep__c</fullName>
        <label>Roll-out Plan (deprecated use newer ver)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_CPP_ID__c</fullName>
        <description>18 character id</description>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC CPP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIAL_HANDLING_INSTRUCTIONS__c</fullName>
        <description>Migrated from long text to rich text on ~2020-02-03T14:08:15-0800</description>
        <label>Special Handling Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Scale_Out_Reads_Required__c</fullName>
        <label>z_Scale Out Reads Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Handling_Instructions_dep__c</fullName>
        <label>Special Handling(deprecated use newer v)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supplementary_Databases__c</fullName>
        <inlineHelpText>Other Databases in Architecture (Polyglot)</inlineHelpText>
        <label>z_Supplementary Databases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Store_Size_GB__c</fullName>
        <label>Total Store Size (GB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trec_Score__c</fullName>
        <formula>Transactional_Score__c  +  Real_Time_Score__c + Evolving_Schema_Score__c + Complex_Query_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z_Total Trec Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transactional_Notes__c</fullName>
        <label>z_Transactional Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transactional_Score__c</fullName>
        <label>z_Transactional Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transactional_Update_Frequency__c</fullName>
        <inlineHelpText>How often will the data in DB be updated? (hourly? monthly?)</inlineHelpText>
        <label>z_Transactional - Update Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USE_CASE_DESCRIPTION__c</fullName>
        <description>Migrated from long text to rich text on ~2020-02-03T14:08:15-0800</description>
        <label>Use Case Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UpgradeStatusNotes__c</fullName>
        <businessOwnerGroup>Customer_Success</businessOwnerGroup>
        <description>This field is used by the Customer Success Team. It&apos;s used for notes regarding the customer&apos;s upgrade status. The field is mapped to the corresponding field in Gainsight. It&apos;s populated in Gainsight by the CST and then automatically populated/updated in Salesforce. JIRA: SFDCSPT-491</description>
        <inlineHelpText>Contains notes regarding the customer&apos;s current upgrade status. The field populated by the Customer Success Team in Gainsight and then automatically populated/updated by Gainsight in Salesforce.</inlineHelpText>
        <label>Upgrade Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UpgradeStatus__c</fullName>
        <businessOwnerGroup>Customer_Success</businessOwnerGroup>
        <description>This field is used by the Customer Success Team. It shows the current upgrade status of the customer. The field is mapped to the corresponding field in Gainsight. It&apos;s populated in Gainsight by the CST and then automatically populated/updated in Salesforce. JIRA: SFDCSPT-491</description>
        <inlineHelpText>Shows the current upgrade status of the customer. The field populated by the Customer Success Team in Gainsight and then automatically populated/updated by Gainsight in Salesforce.</inlineHelpText>
        <label>Upgrade Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excluded - Planning to Upgrade</fullName>
                </value>
                <value>
                    <fullName>Plans Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Planning to Upgrade</fullName>
                </value>
                <value>
                    <fullName>Upgrade Completed</fullName>
                </value>
                <value>
                    <fullName>Already Upgraded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Case_Description_dep__c</fullName>
        <label>Use Case Descrip(deprecated use newer v)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workload_Type__c</fullName>
        <inlineHelpText>Transactional (OLTP), Analytical/Batch (OLAP) or Mixed (HTAP)?</inlineHelpText>
        <label>Workload Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HTAP Mixed</fullName>
                    <label>HTAP (Mixed)</label>
                </value>
                <value>
                    <fullName>OLAP</fullName>
                </value>
                <value>
                    <fullName>OLTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Write_Throughput__c</fullName>
        <inlineHelpText>Provide a description of the write throughput requirements.</inlineHelpText>
        <label>Write Throughput</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk_Org_ID__c</fullName>
        <label>Zendesk Org ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_Rels__c</fullName>
        <label># of Rels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>production_status__c</fullName>
        <inlineHelpText>Are they in production? If so, is it a full-scale production or only an inital, limited scale?</inlineHelpText>
        <label>Production Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Limited Production</fullName>
                </value>
                <value>
                    <fullName>Full Production</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Project Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Go_Live_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CPPs_by_Next_Check_In_Q</fullName>
        <columns>NAME</columns>
        <columns>Account_Customer_Segment__c</columns>
        <columns>Customer_Success_Architect__c</columns>
        <columns>Customer_Success_Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_US_Territory__c</field>
            <operation>equals</operation>
            <value>West,Central</value>
        </filters>
        <filters>
            <field>CPP_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>West Central by Next Check-In Q</label>
    </listViews>
    <listViews>
        <fullName>EMEA_by_Next_Check_In_Q</fullName>
        <columns>NAME</columns>
        <columns>Account_Customer_Segment__c</columns>
        <columns>Customer_Success_Architect__c</columns>
        <columns>Customer_Success_Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Global_Territory__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>CPP_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>EMEA by Next Check-In Q</label>
    </listViews>
    <listViews>
        <fullName>East_by_Next_Check_In_Q</fullName>
        <columns>NAME</columns>
        <columns>Account_Customer_Segment__c</columns>
        <columns>Customer_Success_Architect__c</columns>
        <columns>Customer_Success_Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_US_Territory__c</field>
            <operation>equals</operation>
            <value>East</value>
        </filters>
        <filters>
            <field>CPP_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>East by Next Check-In Q</label>
    </listViews>
    <listViews>
        <fullName>ROW_by_Next_Check_In_Q</fullName>
        <columns>NAME</columns>
        <columns>Account_Customer_Segment__c</columns>
        <columns>Customer_Success_Architect__c</columns>
        <columns>Customer_Success_Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Global_Territory__c</field>
            <operation>equals</operation>
            <value>LATAM,APAC</value>
        </filters>
        <filters>
            <field>CPP_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>ROW by Next Check-In Q</label>
    </listViews>
    <nameField>
        <label>Customer Project Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Project Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>